--- a/README
+++ b/README
@@ -85,12 +85,13 @@ METHODS
 
         "cmd"
             The query command to send to the server. This can be "mod",
-            "dists", "auth", "timestamp" or "topten". If no "cmd" is
-            specified the component will default to "timestamp". The first
-            three commands require a "search" term.
+            "dists", "corelist", "auth", "timestamp" "mirrors" or "topten".
+            If no "cmd" is specified the component will default to
+            "timestamp". The first three commands require a "search" term.
 
         "search"
-            The search term to use for the "mod", "dists", "auth" commands.
+            The search term to use for the "mod", "dists", "auth",
+            "corelist" commands.
 
         See "OUTPUT EVENTS" below for what will be sent to your session in
         reply.
