--- a/README
+++ b/README
@@ -85,12 +85,12 @@ METHODS
 
         "cmd"
             The query command to send to the server. This can be "mod",
-            "dists", "corelist", "auth", "timestamp" "mirrors" or "topten".
-            If no "cmd" is specified the component will default to
+            "dist", "dists", "corelist", "auth", "timestamp" "mirrors" or
+            "topten". If no "cmd" is specified the component will default to
             "timestamp". The first three commands require a "search" term.
 
         "search"
-            The search term to use for the "mod", "dists", "auth",
+            The search term to use for the "mod", "dist", "dists", "auth",
             "corelist" commands.
 
         See "OUTPUT EVENTS" below for what will be sent to your session in
